# snowflake_se

./: .gitignore  Dockerfile  LeadingCausesofDeath.json  MAKEFILE  README.md  docker-compose.yaml  local_env.env  pyproject.toml  snow_ddl.sql  values_dev.yaml
data/: LeadingCausesofDeath_noOA.json  global-summary-of-the-month-2022-04-19T17-15-42.csv
python_exercises/: se_python.py
sql_exercises/: exercise_1_part_1.sql  exercise_1_part_2.sql  exercise_1_part_3.sql
