[tool.poetry]
name = "snowflake-se"
version = "0.1.0"
description = ""
authors = ["chris fraleigh <chris.fraleigh@pura.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8"
snowflake-snowpark-python = "^1.14.0"
polars = "^0.20.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
